Add second section
I also cleaned up the classes a bit by adding header and content
subsections to each section and using chained selector and combinators
so set the CSS properties.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="section intro">
+    <div class="section introduction">
         <div class="container">
 
             <div class="header">
@@ -24,10 +24,10 @@
                 </ul>
             </div>
 
-            <div class="hero">
+            <div class="content">
                 <div>
-                    <div class="hero-main">This website is awesome</div>
-                    <div class="hero-secondary">
+                    <div class="hero-text">This website is awesome</div>
+                    <div class="hero-subtext">
                         This website has some subtext that goes here under the main title. It's a
                         smaller
                         font and the color is lower contrast.
@@ -36,6 +36,41 @@
                 </div>
 
                 <div class="image-placeholder">this is a placeholder for an image</div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="section information">
+        <div class="container">
+
+            <div class="header">Some random information.</div>
+
+            <div class="content">
+                <div class="image-container">
+                    <div class="image-border"></div>
+                    <div class="image-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="image-container">
+                    <div class="image-border"></div>
+                    <div class="image-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="image-container">
+                    <div class="image-border"></div>
+                    <div class="image-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="image-container">
+                    <div class="image-border"></div>
+                    <div class="image-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
             </div>
 
         </div>
