--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <div class="section introduction">
+    <div class="section first">
         <div class="container">
 
             <div class="header">
@@ -29,8 +28,7 @@
                     <div class="hero-text">This website is awesome</div>
                     <div class="hero-subtext">
                         This website has some subtext that goes here under the main title. It's a
-                        smaller
-                        font and the color is lower contrast.
+                        smaller font and the color is lower contrast.
                     </div>
                     <button class="sign-up"><a href="#">Sign up</a></button>
                 </div>
@@ -41,7 +39,7 @@
         </div>
     </div>
 
-    <div class="section information">
+    <div class="section second">
         <div class="container">
 
             <div class="header">Some random information.</div>
@@ -71,6 +69,21 @@
                         this is some subtext under an illustration or image
                     </div>
                 </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="section third">
+        <div class="container">
+
+            <div class="content">
+                <div class="quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                    filling up space, or maybe people will actually read it. Who knows? All I know
+                    is that it looks nice.
+                </div>
+                <div class="author">-Thor, God of Thunder</div>
             </div>
 
         </div>
