Add fourth section
The header was moved outside the first section. The sections were given
more descriptive names. The structures of the sections were also
simplified by removing the content divs wherever they were unnecessary.
Some tweaks were made to the width and padding of the container divs.

--- a/index.html
+++ b/index.html
@@ -11,79 +11,96 @@
 
 <body>
 
-    <div class="section first">
+    <div class="section header">
         <div class="container">
 
-            <div class="header">
-                <div class="header-logo">Header Logo</div>
-                <ul class="header-links">
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ul>
+            <div class="header-logo">Header Logo</div>
+
+            <ul class="header-links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+
+        </div>
+    </div>
+
+    <div class="section intro-section">
+        <div class="container">
+
+            <div class="hero">
+                <div class="main-text">This website is awesome</div>
+                <div class="secondary-text">
+                    This website has some subtext that goes here under the main title. It's a
+                    smaller font and the color is lower contrast.
+                </div>
+                <button class="sign-up-button"><a href="#">Sign up</a></button>
             </div>
 
-            <div class="content">
-                <div>
-                    <div class="hero-text">This website is awesome</div>
-                    <div class="hero-subtext">
-                        This website has some subtext that goes here under the main title. It's a
-                        smaller font and the color is lower contrast.
-                    </div>
-                    <button class="sign-up"><a href="#">Sign up</a></button>
-                </div>
+            <div class="image-placeholder">this is a placeholder for an image</div>
+        </div>
 
-                <div class="image-placeholder">this is a placeholder for an image</div>
+    </div>
+
+    <div class="section info-section">
+        <div class="container">
+
+            <div class="main-text">Some random information.</div>
+
+            <div class="gallery">
+                <div class="image-container">
+                    <div class="image-border"></div>
+                    <div class="image-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="image-container">
+                    <div class="image-border"></div>
+                    <div class="image-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="image-container">
+                    <div class="image-border"></div>
+                    <div class="image-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="image-container">
+                    <div class="image-border"></div>
+                    <div class="image-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
             </div>
 
         </div>
     </div>
 
-    <div class="section second">
+    <div class="section quote-section">
         <div class="container">
 
-            <div class="header">Some random information.</div>
-
-            <div class="content">
-                <div class="image-container">
-                    <div class="image-border"></div>
-                    <div class="image-subtext">
-                        this is some subtext under an illustration or image
-                    </div>
-                </div>
-                <div class="image-container">
-                    <div class="image-border"></div>
-                    <div class="image-subtext">
-                        this is some subtext under an illustration or image
-                    </div>
-                </div>
-                <div class="image-container">
-                    <div class="image-border"></div>
-                    <div class="image-subtext">
-                        this is some subtext under an illustration or image
-                    </div>
-                </div>
-                <div class="image-container">
-                    <div class="image-border"></div>
-                    <div class="image-subtext">
-                        this is some subtext under an illustration or image
-                    </div>
-                </div>
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                filling up space, or maybe people will actually read it. Who knows? All I know
+                is that it looks nice.
             </div>
+            <div class="author">-Thor, God of Thunder</div>
 
         </div>
     </div>
 
-    <div class="section third">
+    <div class="section cta-section">
         <div class="container">
 
-            <div class="content">
-                <div class="quote">
-                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just
-                    filling up space, or maybe people will actually read it. Who knows? All I know
-                    is that it looks nice.
+            <div class="cta-box">
+                <div class="call-to-action">
+                    <div class="main-text">Call to action! It's time!</div>
+                    <div class="secondary-text">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
                 </div>
-                <div class="author">-Thor, God of Thunder</div>
+                <button class="sign-up-button"><a href="#">Sign up</a></button>
             </div>
 
         </div>
