--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
         </div>
     </div>
 
+    <div class="section footer">
+        <div class="container">
+            <div class="copyright">Copyright © The Odin Project 2021</div>
+        </div>
+    </div>
+
 </body>
 
 </html>
